Fix the cursor point for window move

WindowServiceDelegateImpl takes the cursor location in screen
coordinate and passes it directly to WmToplevelWindowEventHandler,
however WmToplevelWindowEventHandler expects the location in
the parent window's coordinate. Without the coordinate conversion
the dragging will be handled incorrectly.

BUG=892714
TEST=the new test case covers

Change-Id: Ib8ff9bf3a6ded0e859d1a433add9d46bc52c5594
Reviewed-on: https://chromium-review.googlesource.com/c/1274527
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598996}
Former-commit-id: a9689529f5d42ab69fb574428ae0fd2ffb2a7d87