ash/ws/window_service_delegate_impl.cc
@@ -32,6 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/ozone/public/ozone_platform.h"
 #include "ui/views/widget/widget.h"
 #include "ui/wm/core/compound_event_filter.h"
+#include "ui/wm/core/coordinate_conversion.h"
 
 namespace ash {
 namespace {
@@ -125,11 +126,15 @@ void WindowServiceDelegateImpl::RunWindowMoveLoop(
       source == ws::mojom::MoveLoopSource::MOUSE
           ? ::wm::WINDOW_MOVE_SOURCE_MOUSE
           : ::wm::WINDOW_MOVE_SOURCE_TOUCH;
+
+  gfx::Point location_in_parent = cursor;
+  ::wm::ConvertPointFromScreen(window->parent(), &location_in_parent);
+
   Shell::Get()
       ->toplevel_window_event_handler()
       ->wm_toplevel_window_event_handler()
       ->AttemptToStartDrag(
-          window, cursor, HTCAPTION, aura_source,
+          window, location_in_parent, HTCAPTION, aura_source,
           base::BindOnce(&OnMoveLoopCompleted, std::move(callback)));
 }
 
